[Urgain] Action error solve

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v3
+      - uses: actions/checkout@v3
       - name: Node Version
         uses: actions/setup-node@v1
         with:
@@ -19,4 +19,3 @@ jobs:
           npm test -- --coverage
         env:
             CI: true
-            
