--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
             node-version: "12.x"
-      - run: |
-          npm ci
-          npm run format:check
-          npm test -- --coverage
+      - run: npm ci
+      - run: npm run format:check
+      - run: npm test -- --coverage
         env:
             CI: true
