[Urgain] Node Version changed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Node Version
         uses: actions/setup-node@v1
         with:
-            node-version: "12.x"
+            node-version: "14"
       - run: npm ci
       - run: npm run format:check
       - run: npm test -- --coverage
