[Urgain] Node version step removed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Node Version
-        uses: actions/setup-node@v1
-        with:
-            node-version: "14"
+      # - name: Node Version
+      #   uses: actions/setup-node@v1
+      #   with:
+      #       node-version: "14"
       - run: npm ci
       - run: npm run format:check
       - run: npm test -- --coverage
