--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       #   with:
       #       node-version: "14"
       - run: npm ci
-      - run: npm run format:check
+      - run: npm run format
       - run: npm test -- --coverage
         env:
             CI: true 
