--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,13 @@ jobs:
       #   uses: actions/setup-node@v1
       #   with:
       #       node-version: "14"
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+            path: ~\AppData\npm-cache
+            key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+            restore-keys: |
+              ${{ runner.os }}-node-
       - run: npm ci
       - run: npm run format
       - run: npm test -- --coverage
