[Urgain] Upload Artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,20 @@ jobs:
       - run: npm test -- --coverage
         env:
             CI: true 
+      - name: Upload test coverage
+        uses: actions/upload-artifact@v3
+        with:
+            name: code-coverage
+            path: coverage
       - name: Build Project
         if: github.event_name == 'push'
         run: npm run build
+      - name: Upload Build folder
+        if: github.event_name == 'push'
+        uses: actions/upload-artifact@v3
+        with:
+              name: build
+              path: build
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain urgain.surge.sh
