--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "node-fetch": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "semantic-release": "^21.0.6"
   }
 }
